# vito

./: .env  .env.test  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose.yml  docker-compose.yml  entrypoint.sh  generate-env.sh  nginx.conf  requirements.txt  uwsgi.ini
.cargo/: config.toml
bookkeeping/: admin.py  models.py  serializers.py  urls.py  views.py
bookkeeping/migrations/: 0001_initial.py  0002_category_transaction_category.py  0002_remove_asset_unique_account_asset_type_and_more.py  0003_remove_transaction_account_and_more.py
migrations/: 20250303214621_create_accounts_table.sql  20250303215636_create_accounts_table.up.sql  20250303215636_create_users_and_accounts_table.down.sql  20250303215636_create_users_and_accounts_table.up.sql  20250305140218_assets.up.sql  20250305232221_category.down.sql  20250305232221_category.up.sql  20250306120744_recurringtransaction.down.sql  20250306120744_recurringtransaction.up.sql  20250306234115_transaction.up.sql  20250405050258_stock.down.sql  20250405050258_stock.up.sql  20250405050258_stock_metadata.down.sql  20250405050258_stock_metadata.up.sql  20250405050424_stock_holdings.down.sql  20250405050424_stock_holdings.up.sql  20250412101307_country.down.sql  20250412101307_country.up.sql  20250420021809_currencies.down.sql  20250420021809_currencies.up.sql  20250622010103_seed_countries.down.sql  20250622010103_seed_countries.up.sql  20250705131305_currency_holding.up.sql  20250705150131_alter_currency_holding_naming.up.sql
src/: db.rs  error.rs  main.rs  worker.rs
src/api/: mod.rs
src/api/country/: country_info.rs  mod.rs
src/api/stock/: mod.rs  stock_metadata.rs
src/core/: mod.rs
src/core/account/: account.rs  account_handler.rs  account_repository.rs  account_routes.rs  login_logout_handler.rs  login_logout_routes.rs  mod.rs
src/core/asset/: asset.rs  asset_repository.rs  asset_routes.rs  mod.rs
src/db/: pool.rs
src/handlers/: account_handler.rs  asset_handler.rs  category_handler.rs  country_handler.rs  login_handler.rs  login_logout_handler.rs  mod.rs  recurringtransaction_handler.rs  stock_handler.rs  transaction_handler.rs  user_handler.rs
src/models/: account.rs  asset.rs  category.rs  country.rs  currency.rs  mod.rs  recurring_transaction.rs  recurringtransaction.rs  stock.rs  transaction.rs  user.rs
src/repository/: account_repository.rs  asset_repository.rs  category_repository.rs  country_repository.rs  currency_repository.rs  mod.rs  recurring_transaction_repository.rs  recurringtransaction_repository.rs  stock_repository.rs  transaction_repository.rs  user_repository.rs
src/routes/: account_routes.rs  asset_routes.rs  category_routes.rs  country_routes.rs  login_logout_routes.rs  login_routes.rs  mod.rs  recurring_transaction_routes.rs  recurringtransaction_routes.rs  stock_routes.rs  transaction_routes.rs  user_routes.rs
src/scheduler/: country_info_updater.rs  mod.rs  scheduler_launcher.rs  stock_info_updater.rs  stock_meta_updater.rs
vito/: asgi.py  settings.py  urls.py  wsgi.py
(+52 files in other folders)
