[package]
name = "vito"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
hyper = "1.6.0"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "rust_decimal",
] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = "0.6.2"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
rust_decimal = "1.36.0"
axum-login = "0.17.0"
async-trait = "0.1.87"
argon2 = "0.5.3"
dashmap = "6.1.0"
redis = { version = "0.29.1", features = ["tokio-comp"] }
