[package]
name = "vito"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
hyper = "1.6.0"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "rust_decimal",
] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
rust_decimal = "1.36.0"
axum-login = "0.17.0"
async-trait = "0.1.87"
argon2 = "0.5.3"
redis = "0.29.1"
serde_json = "1.0.140"
tower-cookies = "0.11.0"
tower-sessions-redis-store = "0.16.0"
tower-sessions = "0.14.0"
time = "0.3.39"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
http = "1.3.1"
cron = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
rust_decimal_macros = "1.37.1"
tower = "0.5.2"
csv = "1.3.1"
openssl = { version = "0.10.73", features = ["vendored"] }
