[package]
name = "vito"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
hyper = "1.6.0"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "rust_decimal",
] }
tokio = "1.43.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
rust_decimal = "1.36.0"
axum-login = "0.17.0"
async-trait = "0.1.87"
argon2 = "0.5.3"
redis = "0.29.1"
serde_json = "1.0.140"
tower-cookies = "0.11.0"
tower-sessions-redis-store = "0.16.0"
tower-sessions = "0.14.0"
time = "0.3.39"
http = "1.3.1"
cron = "0.15.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal_macros = "1.37.1"
tower = "0.5.2"
csv = "1.3.1"
tracing-subscriber = "0.3.19"
log = "0.4.27"
